--- a/escaping-network-frigate/docker-compose.yml
+++ b/escaping-network-frigate/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     shm_size: "128mb" # update for your cameras based on calculation above
     devices:
       - /dev/bus/usb:/dev/bus/usb # passes the USB Coral, needs to be modified for other versions
-      - /dev/dri/renderD128 # for intel hwaccel, needs to be updated for your hardware
+      # - /dev/dri/renderD128 # for intel hwaccel, needs to be updated for your hardware
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ${APP_DATA_DIR}/config.yml:/config/config.yml
