--- a/escaping-network-plausible/docker-compose.yml
+++ b/escaping-network-plausible/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - plausible_events_db
       - mail
     environment:
-      - BASE_URL=http://umbrel.local:9090
+      - BASE_URL=http://escaping-network-plausible_web_1:9090
       - SECRET_KEY_BASE=${APP_PASSWORD}
 
 volumes:
