--- a/escaping-network-actual-budget/umbrel-app.yml
+++ b/escaping-network-actual-budget/umbrel-app.yml
@@ -3,13 +3,13 @@ id: escaping-network-actual-budget
 icon: https://svgur.com/i/xuX.svg
 category: finance
 name: Actual Budget
-version: "23.9.0"
+version: "23.10.0"
 tagline: A super fast and privacy-focused app for managing your finances.
 description: >-
   Actual Budget uses the well proven and much loved Envelope Budgeting methodology.
   You own your data and can do whatever you want with it. 
   Featuring multi-device sync, optional end-to-end encryption and so much more.
-releaseNotes: ""
+releaseNotes: https://actualbudget.org/docs/releases/#23100
 developer:  James Long
 website: https://actualbudget.org/
 repo: https://github.com/actualbudget/actual
