--- a/escaping-network-frigate/docker-compose.yml
+++ b/escaping-network-frigate/docker-compose.yml
@@ -1,15 +1,20 @@
 version: "3.7"
 
 services:
+  app_proxy:
+    environment:
+      APP_HOST: escaping-network-frigate_web_1
+      APP_PORT: 5000
+      PROXY_AUTH_ADD: "false"
+  
   web:
     privileged: true # this may not be necessary for all setups
-    network_mode: host
     restart: unless-stopped
     image: ghcr.io/blakeblackshear/frigate:stable@sha256:bb7f7e76a13eccef0b12704e5851cc774a12af1f12df387d6a70a796a3e938c3
     shm_size: "128mb" # update for your cameras based on calculation above
     devices:
       - /dev/bus/usb:/dev/bus/usb # passes the USB Coral, needs to be modified for other versions
-      # - /dev/dri/renderD128 # for intel hwaccel, needs to be updated for your hardware
+      - /dev/dri/renderD128 # for intel hwaccel, needs to be updated for your hardware
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ${APP_DATA_DIR}/config.yml:/config/config.yml
