--- a/escaping-network-frigate/docker-compose.yml
+++ b/escaping-network-frigate/docker-compose.yml
@@ -10,7 +10,7 @@ services:
   web:
     privileged: true # this may not be necessary for all setups
     # network_mode: host
-    restart: on-failure
+    restart: unless-stopped
     image: ghcr.io/blakeblackshear/frigate:0.12.1@sha256:bb7f7e76a13eccef0b12704e5851cc774a12af1f12df387d6a70a796a3e938c3
     shm_size: "128mb" # update for your cameras based on calculation above
     devices:
