--- a/escaping-network-urbit/docker-compose.yml
+++ b/escaping-network-urbit/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       PROXY_AUTH_ADD: "false"
   
   manager:
-    image: escaping/urbit-umbrel:latest@sha256:9540a1d2b22044f7e4fbb13858d9a67ecac704babaf6ab7648744b524f55e584
+    image: escaping/urbit-umbrel:v3.0@sha256:19b7c7ac285e2c0cd9d371ff8d3bdb1ae6e9754b8ebcdf60c686e8e4dc09ec77
     ports:
       - "34343:34343"
     volumes:
