--- a/escaping-network-frigate/docker-compose.yml
+++ b/escaping-network-frigate/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     privileged: true # this may not be necessary for all setups
     # network_mode: host
     restart: unless-stopped
-    image:     image:
+    image: ghcr.io/blakeblackshear/frigate:0.13.2@sha256:2906991ccad85035b176941f9dedfd35088ff710c39d45ef1baa9a49f2b16734
     shm_size: "128mb" # update for your cameras based on calculation above
     devices:
      - /dev:/dev
