--- a/escaping-network-plausible/docker-compose.yml
+++ b/escaping-network-plausible/docker-compose.yml
@@ -6,13 +6,9 @@ services:
       APP_HOST: escaping-network-plausible_web_1
       APP_PORT: 9090
 
-  mail:
-    image: bytemark/smtp
-    restart: always
-
   plausible_db:
     # supported versions are 12, 13, and 14
-    image: postgres:14-alpine
+    image: postgres:16-alpine
     restart: always
     volumes:
       - db-data:/var/lib/postgresql/data
@@ -20,10 +16,11 @@ services:
       - POSTGRES_PASSWORD=postgres
 
   plausible_events_db:
-    image: clickhouse/clickhouse-server:23.3.7.5-alpine
+    image: clickhouse/clickhouse-server:24.3.3.102-alpine
     restart: always
     volumes:
       - event-data:/var/lib/clickhouse
+      - event-logs:/var/log/clickhouse-server
       - ./clickhouse/clickhouse-config.xml:/etc/clickhouse-server/config.d/logging.xml:ro
       - ./clickhouse/clickhouse-user-config.xml:/etc/clickhouse-server/users.d/logging.xml:ro
     ulimits:
@@ -31,14 +28,13 @@ services:
         soft: 262144
         hard: 262144
 
-  web:
-    image: plausible/analytics:v2.0
+  plausible:
+    image: ghcr.io/plausible/community-edition:v2.1.1
     restart: always
     command: sh -c "sleep 10 && /entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh run"
     depends_on:
       - plausible_db
       - plausible_events_db
-      - mail
     environment:
       - BASE_URL=http://escaping-network-plausible_web_1:9090
       - PORT=9090
@@ -48,4 +44,6 @@ volumes:
   db-data:
     driver: local
   event-data:
+    driver: local
+  event-logs:
     driver: local
