--- a/escaping-network-plausible/docker-compose.yml
+++ b/escaping-network-plausible/docker-compose.yml
@@ -38,8 +38,8 @@ services:
     environment:
       - BASE_URL=http://escaping-network-plausible_plausible_1:9091
       - PORT=9091
-      - SECRET_KEY_BASE=${SECRET_KEY}
-      - TOTP_VAULT_KEY=${VAULT_KEY}
+      - SECRET_KEY_BASE=${APP_PLAUSIBLE_SECRET_KEY}
+      - TOTP_VAULT_KEY=${APP_PLAUSIBLE_VAULT_KEY}
 
 volumes:
   db-data:
