--- a/escaping-network-plausible/docker-compose.yml
+++ b/escaping-network-plausible/docker-compose.yml
@@ -10,19 +10,21 @@ services:
     # supported versions are 12, 13, and 14
     image: postgres:16-alpine
     restart: always
+    user: "1000:1000"
     volumes:
-      - db-data:/var/lib/postgresql/data
+      - ${APP_DATA_DIR}/db-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=postgres
 
   plausible_events_db:
     image: clickhouse/clickhouse-server:24.3.3.102-alpine
     restart: always
+    user: "1000:1000"
     volumes:
-      - event-data:/var/lib/clickhouse
-      - event-logs:/var/log/clickhouse-server
-      - ./clickhouse/clickhouse-config.xml:/etc/clickhouse-server/config.d/logging.xml:ro
-      - ./clickhouse/clickhouse-user-config.xml:/etc/clickhouse-server/users.d/logging.xml:ro
+      - ${APP_DATA_DIR}/event-data:/var/lib/clickhouse
+      - ${APP_DATA_DIR}/event-logs:/var/log/clickhouse-server
+      - ${APP_DATA_DIR}/clickhouse/clickhouse-config.xml:/etc/clickhouse-server/config.d/logging.xml:ro
+      - ${APP_DATA_DIR}/clickhouse/clickhouse-user-config.xml:/etc/clickhouse-server/users.d/logging.xml:ro
     ulimits:
       nofile:
         soft: 262144
@@ -31,6 +33,7 @@ services:
   plausible:
     image: ghcr.io/plausible/community-edition:v2.1.1
     restart: always
+    user: "1000:1000"
     command: sh -c "sleep 10 && /entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh run"
     depends_on:
       - plausible_db
@@ -40,11 +43,3 @@ services:
       - PORT=9091
       - SECRET_KEY_BASE=${APP_PLAUSIBLE_SECRET_KEY}
       - TOTP_VAULT_KEY=${APP_PLAUSIBLE_VAULT_KEY}
-
-volumes:
-  db-data:
-    driver: local
-  event-data:
-    driver: local
-  event-logs:
-    driver: local
