--- a/escaping-network-simplex-server/docker-compose.yml
+++ b/escaping-network-simplex-server/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: simplex-server_web_1
+      APP_HOST: escaping-network-simplex-server_web_1
       APP_PORT: 80
       PROXY_AUTH_ADD: "false"
 
