--- a/escaping-network-simplex-server/docker-compose.yml
+++ b/escaping-network-simplex-server/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     environment:
-      ADDR: ${SIMPLEX_ADDR}
+      ADDR: ${APP_SIMPLEX_SERVER_HIDDEN_SERVICE}
       PASS: ${APP_PASSWORD}
     ports:
       - 5223:5223
@@ -33,7 +33,7 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     environment:
-      ADDR: ${SIMPLEX_ADDR}
+      ADDR: ${APP_SIMPLEX_SERVER_HIDDEN_SERVICE}
       QUOTA: "2GB"
     ports:
       - 5443:443
@@ -41,3 +41,13 @@ services:
       - ${APP_DATA_DIR}/data/xftp/config:/etc/opt/simplex-xftp:z
       - ${APP_DATA_DIR}/data/xftp/logs:/var/opt/simplex-xftp:z
       - ${APP_DATA_DIR}/data/xftp/files:/srv/xftp:z
+
+  tor:
+    image: getumbrel/tor:0.4.7.8@sha256:2ace83f22501f58857fa9b403009f595137fa2e7986c4fda79d82a8119072b6a
+    user: "1000:1000"
+    restart: on-failure
+    volumes:
+      - ${APP_DATA_DIR}/torrc:/etc/tor/torrc:ro
+      - ${TOR_DATA_DIR}:/data
+    environment:
+      HOME: "/tmp"
