--- a/escaping-network-simplex-server/torrc.template
+++ b/escaping-network-simplex-server/torrc.template
@@ -5,5 +5,8 @@ SOCKSPort 0
 HiddenServiceNonAnonymousMode 1
 HiddenServiceSingleHopMode 1
 # smp-server hidden service host directory and port mappings
-HiddenServiceDir /data/app-$APP_ID
-HiddenServicePort $APP_SIMPLEX_SERVER_PORT simplex_xmp-server:$APP_SIMPLEX_SERVER_PORT
+HiddenServiceDir /data/app-$APP_ID-smp
+HiddenServicePort $APP_SIMPLEX_SERVER_SMP_PORT escaping-network-simplex-server_smp-server:$APP_SIMPLEX_SERVER_SMP_PORT
+# xftp-server hidden service host directory and port mappings
+HiddenServiceDir /data/app-$APP_ID-xftp
+HiddenServicePort $APP_SIMPLEX_SERVER_XFTP_PORT  escaping-network-simplex-server_xftp-server:$APP_SIMPLEX_SERVER_XFTP_PORT
