--- a/escaping-network-simplex-server/docker-compose.yml
+++ b/escaping-network-simplex-server/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     environment:
       ADDR: ${APP_SIMPLEX_SERVER_SMP_HIDDEN_SERVICE}
       PASS: ${APP_PASSWORD}
+    ports:
+      - 5223:5223
     volumes:
       - ${APP_DATA_DIR}/data/smp/config:/etc/opt/simplex:z
       - ${APP_DATA_DIR}/data/smp/logs:/var/opt/simplex:z
@@ -34,6 +36,8 @@ services:
     environment:
       ADDR: ${APP_SIMPLEX_SERVER_XFTP_HIDDEN_SERVICE}
       QUOTA: "2GB"
+    ports:
+      - 5443:443
     volumes:
       - ${APP_DATA_DIR}/data/xftp/config:/etc/opt/simplex-xftp:z
       - ${APP_DATA_DIR}/data/xftp/logs:/var/opt/simplex-xftp:z
