--- a/escaping-network-simplex-server/smp-server.ini
+++ b/escaping-network-simplex-server/smp-server.ini
@@ -1,7 +1,7 @@
 [TRANSPORT]
 # host is only used to print server address on start
-host: <domain/ip>
-port: 443,5223
+host: localhost
+port: 5443,5223
 websockets: off
 log_tls_errors: off
 control_port: 5224
