--- a/escaping-network-simplex-server/docker-compose.yml
+++ b/escaping-network-simplex-server/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     environment:
-      ADDR: ${DEVICE_HOSTNAME}
+      ADDR: umbrel.local
       PASS: ${APP_PASSWORD}
     ports:
       - 5223:5223
@@ -25,7 +25,7 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     environment:
-      ADDR: ${DEVICE_HOSTNAME}
+      ADDR: umbrel.local
       QUOTA: "2GB"
     ports:
       - 5443:443
