--- a/escaping-network-actual-budget/docker-compose.yml
+++ b/escaping-network-actual-budget/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
   
   web:
-    image: actualbudget/actual-server:24.9.0@sha256:90a670b73ce539ca4bf70e3740756f106ec815d3933cabf2414ae2e26e031d65
+    image: actualbudget/actual-server:24.12.0-alpine@sha256:2dcab0dda0a174a9336e34e75ac03707c684ebcdb331d40a1785c58ff166cd47
     restart: on-failure
     stop_grace_period: 1m
     volumes:
