--- a/escaping-network-simplex-server/docker-compose.yml
+++ b/escaping-network-simplex-server/docker-compose.yml
@@ -9,6 +9,7 @@ services:
 
   smp-server:
     image: escaping/smp-server:v6.2.0@sha256:9e47e381e75fa84a45aa2a0ccf37ceb00f5dc0d06ff2acb438b4d74fb0a780be
+    user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
     environment:
@@ -21,6 +22,7 @@ services:
       - ${APP_DATA_DIR}/data/smp/logs:/var/opt/simplex:z
   xftp-server:
     image: escaping/xftp-server:v6.2.0@sha256:00cfb9b40a85d95754ee097665c8dca57ac90a33a1debcafcc747a913e476092
+    user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
     environment:
