--- a/escaping-network-simplex-server/docker-compose.yml
+++ b/escaping-network-simplex-server/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     environment:
-      ADDR: umbrel.local
+      ADDR: ${DEVICE_HOSTNAME}
       PASS: ${APP_PASSWORD}
     ports:
       - 5223:5223
@@ -26,7 +26,7 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     environment:
-      ADDR: umbrel.local
+      ADDR: ${DEVICE_HOSTNAME}
       QUOTA: "2GB"
     ports:
       - 5443:443
