--- a/escaping-network-simplex-server/smp-server.ini
+++ b/escaping-network-simplex-server/smp-server.ini
@@ -18,7 +18,7 @@ source_code: https://github.com/simplex-chat/simplexmq
 # server_country: ISO-3166 2-letter code
 # operator: entity (organization or person name)
 # operator_country: ISO-3166 2-letter code
-# website:
+ website:
 
 # Administrative contacts.
 # admin_simplex: SimpleX address
@@ -33,7 +33,7 @@ source_code: https://github.com/simplex-chat/simplexmq
 # complaints_pgp_fingerprint:
 
 # Hosting provider.
-# hosting: entity (organization or person name)
+hosting: smp://${FINGERPRINT}:${APP_PASSWORD}@${DEVICE_HOSTNAME}
 # hosting_country: ISO-3166 2-letter code
 
 # Hosting type can be `virtual`, `dedicated`, `colocation`, `owned`
