use hosting field to show server addr

--- a/escaping-network-simplex-server/smp-server.ini
+++ b/escaping-network-simplex-server/smp-server.ini
@@ -33,7 +33,7 @@ source_code: https://github.com/simplex-chat/simplexmq
 # complaints_pgp_fingerprint:
 
 # Hosting provider.
-hosting: smp://${FINGERPRINT}:${APP_PASSWORD}@${DEVICE_HOSTNAME}
+hosting: ${SERVER_DIR}
 # hosting_country: ISO-3166 2-letter code
 
 # Hosting type can be `virtual`, `dedicated`, `colocation`, `owned`
