--- a/escaping-network-urbit/docker-compose.yml
+++ b/escaping-network-urbit/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       PROXY_AUTH_ADD: "false"
   
   manager:
-    image: mopfelwinrux/urbit-umbrel:v3.0@sha256:19b7c7ac285e2c0cd9d371ff8d3bdb1ae6e9754b8ebcdf60c686e8e4dc09ec77
+    image: escaping/urbit-umbrel:latest@sha256:51f1b41d07afda0bfdec2b2fe8d934e42fd39cf1a7f9e59ee081e758dad1e397
     ports:
       - "34343:34343"
     volumes:
