--- a/escaping-network-wavelog/umbrel-app.yml
+++ b/escaping-network-wavelog/umbrel-app.yml
@@ -1,6 +1,7 @@
 manifestVersion: 1
+id: escaping-network-wavelog
 name: Wavelog
-version: latest
+version: "2.0.7"
 tagline: Amateur radio logging software
 description: Wavelog is an open-source web-based application for amateur radio operators to log and manage their contacts (QSOs). It supports features like QSL management, awards tracking, and integration with services like QRZ and LoTW.
 category: Utilities
