--- a/escaping-network-wavelog/docker-compose.yml
+++ b/escaping-network-wavelog/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.7"
 services:
   app_proxy:
     environment:
@@ -6,7 +5,6 @@ services:
       APP_PORT: 8990
       PROXY_AUTH_ADD: "false"
   wavelog-db:
-    container_name: wavelog-db_1
     image: mariadb:11.4@sha256:sha256:39596f079862334be04f4231664862e55d4febe54309cc62f750f2297de85b06
     environment:
       MARIADB_RANDOM_ROOT_PASSWORD: yes
@@ -18,7 +16,7 @@ services:
   wavelog-main:
     container_name: wavelog-main_1
     depends_on:
-      - wavelog-db_1
+      - wavelog-db
     image: ghcr.io/wavelog/wavelog:2.0.7@sha256:40721405cfbcbbb1e861c1713202f69cb3416b2753ed5cce02e5542235245eb4
     volumes:
       - ${APP_DATA_DIR}/config:/var/www/html/application/config/docker
