--- a/escaping-network-wavelog/docker-compose.yml
+++ b/escaping-network-wavelog/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       APP_PORT: 8990
       PROXY_AUTH_ADD: "false"
   wavelog-db:
-    image: mariadb:11.4@sha256:sha256:39596f079862334be04f4231664862e55d4febe54309cc62f750f2297de85b06
+    image: mariadb:11.4@sha256:39596f079862334be04f4231664862e55d4febe54309cc62f750f2297de85b06
     environment:
       MARIADB_RANDOM_ROOT_PASSWORD: yes
       MARIADB_DATABASE: wavelog
