--- a/escaping-network-wavelog/docker-compose.yml
+++ b/escaping-network-wavelog/docker-compose.yml
@@ -21,3 +21,5 @@ services:
       - ${APP_DATA_DIR}/config:/var/www/html/application/config/docker
       - ${APP_DATA_DIR}/uploads:/var/www/html/uploads
       - ${APP_DATA_DIR}/userdata:/var/www/html/userdata
+    ports:
+      - "8990:80"
