--- a/escaping-network-wavelog/docker-compose.yml
+++ b/escaping-network-wavelog/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - ${APP_DATA_DIR}/dbdata:/var/lib/mysql
   wavelog-main:
+    user: "1000:1000"
     depends_on:
       - wavelog-db
     environment:
